[build-system]
requires = ["scikit-build-core>=1.0", "pybind11>=3.0", "pybind11-stubgen>=2.5", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "dngparser"
version = "0.1.0"
description = "Fast DNG parser for numpy datasets (DJI Pocket 4 + Apple ProRAW)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "JonahZeng"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=2.0",
]

[project.urls]
Homepage = "https://github.com/JonahZeng/dngparser"
Repository = "https://github.com/JonahZeng/dngparser"
Issues = "https://github.com/JonahZeng/dngparser/issues"

[project.optional-dependencies]
dev = ["pytest", "pybind11-stubgen>=2.5", "build", "scikit-build-core"]

[tool.scikit-build]
cmake.version = ">=3.18"
ninja.make-fallback = true

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *_i686 *-musllinux*"
archs = ["auto64"]
test-command = "python -c \"import dngparser; print(dngparser.__version__)\""
